--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-//    buildFeatures {
-//        viewBinding true
-//    }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -45,7 +45,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
-//    implementation 'com.android.support:design:28.0.0'
+  //  implementation 'com.android.support:design:28.0.0'
 
   //  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.volley:volley:1.2.1'
